# Windows-CalcEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/: WCEProjectMacros.cmake
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/Chromogenics/: Chromogenics_tests  Makefile  cmake_install.cmake
src/Common/: FenestrationCommon_tests  Makefile  cmake_install.cmake
src/Gases/: CMakeCache.txt  CMakeLists.txt  Gases_tests  Makefile  cmake_install.cmake  test.py
src/Gases/bpp/: bpp.cpp
src/Gases/tst/: main.cpp
src/MultiLayerOptics/: Makefile  cmake_install.cmake
src/SingleLayerOptics/: CMakeLists.txt  Makefile  cmake_install.cmake  test.py
src/SingleLayerOptics/bpp/: BPPSLOLib.cpp
src/SpectralAveraging/: Makefile  SpectralAveraging_tests  cmake_install.cmake
src/Tarcog/: CMakeCache.txt  CMakeLists.txt  Makefile  Tarcog_tests  cmake_install.cmake  test.py
src/Tarcog/bpp/: BPPTarcogLib.cpp
src/Viewer/: Makefile  Viewer_tests  cmake_install.cmake
